Framework for serial driver.

--- a/etc/iwar2.conf
+++ b/etc/iwar2.conf
@@ -12,8 +12,9 @@ M: /usr/local/bin/iwar_sip --config $DIALER_CONFIG_PATH/iwar_sip.conf --fifo=$FI
 
 # S == on thread per-entry.
 
-S: /usr/local/bin/iwar_serial --port=/dev/ttyS0 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
-S: /usr/local/bin/iwar_serial --port=/dev/ttyS1 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
-S: /usr/local/bin/iwar_serial --port=/dev/ttyS2 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
-S: /usr/local/bin/iwar_serial --port=/dev/ttyS3 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
+S: /usr/local/bin/iwar_serial --port=/dev/ttyS0 --speed=1200 --parity=none --databits=8 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
+
+#S: /usr/local/bin/iwar_serial --port=/dev/ttyS1 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
+#S: /usr/local/bin/iwar_serial --port=/dev/ttyS2 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
+#S: /usr/local/bin/iwar_serial --port=/dev/ttyS3 --speed=1200,8N1 --config=$DIALER_CONFIG_PATH/iwar_serial.conf --fifo=$FIFO
 
