--- a/etc/iwar2.conf
+++ b/etc/iwar2.conf
@@ -2,6 +2,10 @@
 var FIFO /var/run/iwar.fifo
 var DIALER_CONFIG_PATH /usr/local/etc
 
+# Configuration to "what" iWar2 will alert on.
+
+var /usr/local/etc/iwar-alert.conf
+
 max_threads 10	( --max_threads )
 
 M: /usr/local/bin/iwar_sip --config $DIALER_CONFIG_PATH/iwar_sip.conf --fifo=$FIFO
