--- a/etc/iwar2.conf
+++ b/etc/iwar2.conf
@@ -4,7 +4,7 @@ var DIALER_CONFIG_PATH /usr/local/etc
 
 # Configuration to "what" iWar2 will alert on.
 
-var /usr/local/etc/iwar-alert.conf
+var ALERT_CONFIG /usr/local/etc/iwar-alert.conf
 
 max_threads 10	( --max_threads )
 
